--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "memo-app-ud",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,9 +10,17 @@
   },
   "dependencies": {
     "expo": "~52.0.23",
+    "expo-constants": "~17.0.3",
+    "expo-linking": "~7.0.3",
+    "expo-router": "4.0.15",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.5"
+    "react-native": "0.76.5",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-web": "~0.19.13",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
